--- a/CSS/style.css
+++ b/CSS/style.css
@@ -338,7 +338,7 @@ hr {
     }
 }
 
-@media all and (max-width:1000px) {
+@media all and (max-width:1100px) {
 
     #home>img {
         background-color: var(--color2);
@@ -349,19 +349,16 @@ hr {
     #home {
         grid-template-columns: 1fr;
     }
-}
-
-@media screen and (max-height: 450px) {
 
     #home>img {
         background-color: var(--color2);
         margin: auto;
-        height: 300px;
+        height: 350px;
     }
 
     #home>h1 {
-        margin: auto;
-        font-size: 45pt;
+        margin: 0;
+        font-size: 40pt;
         font-weight: 700;
         background-color: var(--color2);
         color: var(--color1);
@@ -396,13 +393,5 @@ hr {
 
     #home {
         grid-template-columns: 1fr;
-    }
-
-    .nav {
-        padding-top: 15px;
-    }
-
-    .nav a {
-        font-size: 18px;
     }
 }
