--- a/CSS/style.css
+++ b/CSS/style.css
@@ -126,6 +126,8 @@ header>h2 {
     text-align: center;
     background-color: var(--color2);
     color: var(--color1);
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 h1 {
